init - basic canvas frame setting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="head-area">
+    <canvas id="head"></canvas>
+  </div> 
+  <div id="body-area">
+    <canvas id="body"></canvas> 
+  </div>
+  <div id="bottom-area">
+    <canvas id="bottom"></canvas>
+  </div>
 </body>
   <script src="./dist/app.js"></script>
 </html>
